<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:text="@string/datos_recopilados"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="453dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:text="@string/alimentos"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="373dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:text="@string/noticias"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="218dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="202dp"
        android:layout_height="59dp"
        android:text="@string/insectos"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="297dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="285dp"
        android:layout_height="80dp"
        android:text="@string/intranet"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="59dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>