<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dragonfly_nymph"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="520dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="209dp"
        android:layout_height="71dp"
        android:text="@string/insectos"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="45dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="114dp"
        android:layout_height="90dp"
        android:text="+"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="548dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="159dp"
        android:layout_height="168dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/insecto1"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="133dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="173dp"
        android:layout_height="171dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/insecto2"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="130dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="163dp"
        android:layout_height="167dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/insecto3"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="331dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="163dp"
        android:layout_height="175dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/Insecto4"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="331dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notonectidae"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="305dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corixidae"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="306dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gerridae"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="510dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>